2020-10-12 batch 작성 진행, resource 내 캐시 maxTime 지정

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,17 +10,13 @@
 <div class="container">
     <header th:replace="fragments/header"></header>
 
-    <!--         <section class="notice"> -->
-    <!--             <h2><a href="#" onclick="window.open('notice/list.html','','width=700, height=500')">Notice</a></h2> -->
-    <!--                 <span id="notice-span">공연 Staff 모집 안내</span> -->
-    <!--         </section> -->
     <section class="poster-bg" id="poster-bg">
         <div class="poster-box" id="poster-box">
             <div class="poster-bottom">
-                <figure><a onclick='poster()'><img src="index-image/config1%20(1).jpg"></a></figure>
-                <figure><a href=""><img src="index-image/config1%20(2).jpg"></a></figure>
-                <figure><a href=""><img src="index-image/config1%20(3).jpg"></a></figure>
-                <figure><a href=""><img src="index-image/config1%20(4).jpg"></a></figure>
+                <figure><a onclick='poster()'><img src="image/index-image/config1%20(1).jpg"></a></figure>
+                <figure><a href=""><img src="image/index-image/config1%20(2).jpg"></a></figure>
+                <figure><a href=""><img src="image/index-image/config1%20(3).jpg"></a></figure>
+                <figure><a href=""><img src="image/index-image/config1%20(4).jpg"></a></figure>
             </div>
 
         </div>
@@ -36,11 +32,11 @@
             <h1>버스킹버스킹 인기공연</h1>
             <div class="hover01 column"></div>
         </div>
-        <img id='prevBtn'  class='button prev' src='../index-image/left-arrow.png'>
-        <img id='nextBtn'  class='button next'  src='../index-image/right-arrow.png'>
+        <img id='prevBtn' class='button prev' src='/image/index-image/left-arrow.png'>
+        <img id='nextBtn' class='button next' src='/image/index-image/right-arrow.png'>
     </section>
     <section class="blank">
-        <img src="index-image/blank.png">
+        <img src="/image/index-image/blank.png">
     </section>
     <footer class="clearfix">
     </footer>
